<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen_14"
        tools:context=".views.MainActivity">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="@dimen/dimen_80"
            android:layout_height="@dimen/dimen_80"
            android:src="@drawable/s_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_40"
            android:fontFamily="sans-serif-medium"
            android:text="@string/title_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_23"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogo" />

        <TextView
            android:id="@+id/tvPanNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_60"
            android:fontFamily="sans-serif-medium"
            android:text="@string/pan_number"
            android:textSize="@dimen/text_size_13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleText" />

        <EditText
            android:id="@+id/etPanNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:background="@drawable/et_background"
            android:padding="@dimen/dimen_10"
            android:inputType="textCapCharacters"
            android:textCursorDrawable="@drawable/cursor_drawable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPanNumber" />

        <TextView
            android:id="@+id/tvDob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/birthdate"
            android:textSize="@dimen/text_size_13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPanNumber" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDob">

            <EditText
                android:id="@+id/etDay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/et_background"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="2"
                android:hint="@string/day_hint"
                android:padding="@dimen/dimen_10"
                android:textCursorDrawable="@drawable/cursor_drawable" />

            <EditText
                android:id="@+id/etMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_40"
                android:layout_marginRight="@dimen/dimen_40"
                android:layout_weight="2"
                android:background="@drawable/et_background"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="2"
                android:hint="@string/month_hint"
                android:padding="@dimen/dimen_10"
                android:textCursorDrawable="@drawable/cursor_drawable" />

            <EditText
                android:id="@+id/etYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/et_background"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4"
                android:hint="@string/year_hint"
                android:padding="@dimen/dimen_10"
                android:textCursorDrawable="@drawable/cursor_drawable" />

        </LinearLayout>


        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_14"
            android:text="@string/formatted_message_text"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintBottom_toTopOf="@id/btnNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/dimen_10"
            android:text="@string/next"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16"
            android:enabled="false"
            android:layout_marginBottom="@dimen/dimen_20"
            android:background="@drawable/btn_selector"
            app:layout_constraintBottom_toTopOf="@id/tvDontHavePan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvDontHavePan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:text="@string/i_don_t_have_a_pan"
            android:textColor="@color/purple_200"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>